Fixed layout on mobile.

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,6 @@
+body
+  overflow-x: hidden
+
 .title-section
   display: flex
   justify-content: center
@@ -5,6 +8,9 @@
   
   .title-group
     text-align: center
+    
+    .title-logo
+      width: 180px
     
     .title
       font-size: 35px
@@ -35,8 +41,6 @@
   .intro-container
     width: 700px
   
-    .intro-caption
-      width: 100%
     .card-container
       width: 100%
       display: flex
